Rename 'stats' endpoint to 'info' Close #46
